# agent-pr-replay

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  idea.md  pyproject.toml
examples/: django-report.md  express-report.md  fastapi-report.md  gin-report.md  nextjs-report.md  pytorch-report.md  react-report.md  redis-report.md  ruff-report.md  rust-report.md  spark-report.md  tokio-report.md  vite-report.md
src/agent_heatmap/: __init__.py  agent_runner.py  cli.py  database.py  diff_comparison.py  pr_selector.py  repo.py  session_parser.py  stats.py
src/agent_pr_replay/: __init__.py  agent_runner.py  analyzer.py  cli.py  database.py  diff_comparison.py  pr_finder.py  pr_selector.py  repo.py  session_parser.py  stats.py
tests/: __init__.py
